# 2024_Research_MassifCheck

./: .gitignore  CMakeLists.txt  README.md  SystemDescription.md  run_massif_on_tests.sh
.github/workflows/: check-test-files.yml
QTCreator/2024_Research_MassifCheck/: CMakeLists.txt  TimeUnit.h  fileselector.cpp  fileselector.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  massifanalyzer.cpp  massifanalyzer.h  massifoptions.cpp  massifoptions.h  massifoptionswindow.cpp  massifoptionswindow.h  massifoptionswindow.ui  massifrunner.cpp  massifrunner.h  resultdialog.cpp  resultdialog.h  resultdialog.ui
QT_Massif_App/: AllocationEntry.h  CMakeLists.txt  MassifAnalyzerThresholds.h  ModeEnum.h  Parser.cpp  Parser.h  Snapshot.h  fileselector.cpp  fileselector.h  functionallocsummary.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  massifanalyzer.cpp  massifanalyzer.h  massifanalyzerthresholds.cpp  massifanalyzerthresholdswindow.cpp  massifanalyzerthresholdswindow.h  massifanalyzerthresholdswindow.ui  massifoptions.cpp  massifoptions.h  massifoptionswindow.cpp  massifoptionswindow.h  massifoptionswindow.ui  massifrunner.cpp  massifrunner.h  resultdialog.cpp  resultdialog.h  resultdialog.ui
massif_files/: massif.out.1  massif.out.2  massif.out.3  massif.out.4  massif.out.5  massif.out.6  massif_output.out
src/: main.cpp  massif_parser.cpp  memory_analysis.cpp  memory_analysis.h  parser.cpp  parser.h  snapshot.h
test/: README.md  massif.out.1  massif.out.2  test1.c  test2.c  test3.cpp  test4.cpp  test5.cpp
